[project]
name = "wikipedia-stuff"
authors = [
    { name = "SnowFire" }
]
version = "0.1.0"

requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "seaborn>=0.13",
  "nltk>=3.9",
  "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wiki*"] 

[dependency-groups]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]
    
[tool.uv]

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = false


[tool.ruff]
line-length = 120

